# papertracker_Qt

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_zh.md  THIRD-PARTY.txt  config.json  generate_ts_qm_from_csv.sh  main.cpp  models.qrc  osc_verify.py  radio.py  resources.qrc  temp.pro  test.py  translations.qrc  update_ts.sh  version.json
.github/workflows/: cmake-single-platform.yml
algorithm/: base_inference.cpp  eye_inference.cpp  face_inference.cpp
algorithm/include/: base_inference.hpp  eye_inference.hpp  face_inference.hpp  tools.hpp
babble/: module.json
etvr/: ETVRModuleConfig.json  module.json
resources/: material.qss
resources/styles/: light.qss
transfer/: image_downloader.cpp  osc.cpp  serial.cpp
transfer/include/: image_downloader.hpp  osc.hpp  serial.hpp
translations/: en_US.qm  en_US.ts  ja_JP.qm  ja_JP.ts  ko_KR.qm  ko_KR.ts  strings.tsv  zh_CN.qm  zh_CN.ts
ui/: BubbleTipWidget.cpp  eye_tracker_window.cpp  eye_tracker_window.ui  face_tracker_window.cpp  face_tracker_window.ui  main_window.cpp  main_window.ui  main_window_new.cpp  main_window_refactored.cpp  roi_event.cpp  translator_manager.cpp
ui/components/: face_config_widget.cpp  guide_widget.cpp  sidebar_widget.cpp  title_bar_widget.cpp  widget_component_base.cpp  wifi_setup_widget.cpp
ui/include/: BubbleTipWidget.h  eye_tracker_window.hpp  face_tracker_window.hpp  main_window.h  main_window.hpp  main_window_new.h  main_window_refactored.h  roi_event.hpp  translator_manager.h  ui_eye_tracker_window.h  ui_face_tracker_window.h  ui_main_window.h
ui/include/components/: face_config_widget.h  guide_widget.h  sidebar_widget.h  title_bar_widget.h  widget_component_base.h  wifi_setup_widget.h
ui/include/managers/: device_manager.h
ui/managers/: device_manager.cpp
utilities/: updater.cpp
utilities/include/: updater.hpp
